--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
+    "vue-native-websocket-vue3": "^3.1.7",
+    "vue-router": "^4.4.0",
     "vuetify": "^3.6.10"
   },
   "devDependencies": {
