--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "socket.io-client": "^4.7.5",
     "vue": "^3.2.13",
-    "vue-native-websocket-vue3": "^3.1.7",
     "vue-router": "^4.4.0",
-    "vuetify": "^3.6.10"
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
